--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 __pycache__/Search.cpython-312.pyc
 __pycache__/Search.cpython-312.pyc
+__pycache__/Action.cpython-312.pyc
+__pycache__/Search.cpython-312.pyc
