--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__/Action.cpython-312.pyc
 __pycache__/Search.cpython-312.pyc
 __pycache__/Action.cpython-312.pyc
 __pycache__/Search.cpython-312.pyc
+.editorconfig
+__pycache__/Action.cpython-312.pyc
+__pycache__/Search.cpython-312.pyc
