- Se cambió el orden de ordenación, ya no hacemos: "state.neighbors.sort(key=lambda x: x[0].identifier, reverse=True)" ahora ponemos True. - Se cambió el README.md para actualizar el código y la documentación.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __pycache__/Action.cpython-312.pyc
 __pycache__/Search.cpython-312.pyc
 __pycache__/Action.cpython-312.pyc
 __pycache__/Search.cpython-312.pyc
+__pycache__/ImportJSON.cpython-312.pyc
